--- a/frontweb/public/index.html
+++ b/frontweb/public/index.html
@@ -15,7 +15,7 @@
     <title>DsCatalog</title>
   </head>
   <body>
-    <noscript>Você precisa habilitar o javascript no seu navegador para</noscript>
+    <noscript>Você precisa habilitar o javascript no seu navegador</noscript>
     <div id="root"></div>
     
   </body>
