Add custom.scss, prettier and google fonts Open Sans

--- a/frontweb/public/index.html
+++ b/frontweb/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Projeto desenvolvido do Bootcamp Spring React - DevSuperior"
+      content="Projeto desenvolvido no Bootcamp Spring React - DevSuperior"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
